--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -257,4 +257,6 @@
     "feature4-title-four-description": "Dedicated 24/7 support",
     "feature4-title-five": "Friendly Services",
     "feature4-title-five-description": "30 day satisfaction guarantee"
+
+    ,"text-page-customMenu-title": "정리내용 모음"
 }
